small alignment fixes

--- a/public/stylesheets/sass/aboutsass.scss
+++ b/public/stylesheets/sass/aboutsass.scss
@@ -27,7 +27,7 @@ $orange-transparancy-hover: 0.9;
 	&-main {
 		background: url("/public/viewtemplates/images/aboutimages/hero-image.jpg");
 		color: $white;
-		padding: 50px 0;
+		padding: 100px 0 50px 0;
 
 		&__heading {
 			max-width: 80%;
@@ -40,7 +40,7 @@ $orange-transparancy-hover: 0.9;
 
 		@media (min-width: $screen-sm-min) {
 			padding: 0;
-			padding-top: 70px;
+			padding-top: 90px;
 
 			&__heading {
 				max-width: none;
@@ -56,7 +56,7 @@ $orange-transparancy-hover: 0.9;
 		@media (min-width: $screen-md-min) {
 			.about-hero-main__container {
 				position: absolute;
-				top: 35%;
+				top: 280px;
 				left: 0;
 				right: 0;
 				@include vertical-center-transform();
