--- a/public/stylesheets/sass/nav.scss
+++ b/public/stylesheets/sass/nav.scss
@@ -40,6 +40,7 @@
             border-radius: 0;
             border-right: 1px solid #eee;
             text-align: center;
+            font-size: 16px;
         }
     }
     .nav>li>a:focus, 
@@ -126,6 +127,7 @@
                 border: none;
                 padding: 0;
                 text-align: left;
+                font-size: 14px;
             }
         }
         // .navbar-nav {
